--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <div id="app">
 
-      
+
     </div>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2LiKg0HU1IxAhC7IYczuGF82wg9q7Axs"
-        async defer></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2LiKg0HU1IxAhC7IYczuGF82wg9q7Axs&libraries="
+        async defer></script> -->
 
     <!-- built files will be auto injected -->
   </body>
