--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2LiKg0HU1IxAhC7IYczuGF82wg9q7Axs&"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2LiKg0HU1IxAhC7IYczuGF82wg9q7Axs&libraries=places"></script>
+    <script type="text/javascript" src="./car2go.js"></script>
 
     <meta charset="utf-8">
     <title>acm</title>
