Google DirectionService implemented - not working

--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html>
   <head>
 
+
+
+
+
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2LiKg0HU1IxAhC7IYczuGF82wg9q7Axs&libraries=places"></script>
+
+    <!--
+
+
+    <script  async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2LiKg0HU1IxAhC7IYczuGF82wg9q7Axs&callback=initMap&libraries=places"></script>
+        <script  async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2LiKg0HU1IxAhC7IYczuGF82wg9q7Axs&callback=initMap"></script>
+  -->
 
     <meta charset="utf-8">
     <title>acm</title>
